# rarity-ranker

./: .gitignore  Cargo.toml  README.md
rarity-ranker/: rarity-ranker
rarity-ranker/config/: cache.json  settings.json
src/: main.rs  rankable.rs
src/rankable/: rating_algo.rs  setup.rs
