[package]
name = "rarity-ranker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = {version = "1.0.81"}
serde = { version = "1.0", features = ["derive"]}
dialoguer = {version = "0.10.1"}
console = { version = "0.15.0"}